templates/kangal_template.yaml
---
# Source: kangal/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-kangal-controller
  labels:
    app: kangal-controller
    chart: kangal-2.3.0
    release: release-name
    heritage: Helm
spec:
  type: 
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: kangal-controller
    release: release-name
---
# Source: kangal/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-kangal-openapi-ui
  labels:
    app: kangal-openapi-ui
    chart: kangal-2.3.0
    release: release-name
    heritage: Helm
spec:
  type: 
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: kangal-openapi-ui
    release: release-name
---
# Source: kangal/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-kangal-proxy
  labels:
    app: kangal-proxy
    chart: kangal-2.3.0
    release: release-name
    heritage: Helm
spec:
  type: 
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: kangal-proxy
    release: release-name
---
# Source: kangal/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-kangal-controller
  labels:
    app: kangal-controller
    chart: kangal-2.3.0
    release: release-name
    heritage: Helm
    version: ""
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kangal-controller
      release: release-name
  template:
    metadata:
      labels:
        app: kangal-controller
        release: release-name
        environment: dev
        version: ""
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
        - name:  kangal-controller
          image: "hellofresh/kangal:latest"
          imagePullPolicy: Always
          args:
            - controller
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            {}
---
# Source: kangal/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-kangal-openapi-ui
  labels:
    app: kangal-openapi-ui
    chart: kangal-2.3.0
    release: release-name
    heritage: Helm
    version: ""
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kangal-openapi-ui
      release: release-name
  template:
    metadata:
      labels:
        app: kangal-openapi-ui
        release: release-name
        environment: dev
        version: ""
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
        - name:  kangal-openapi-ui
          image: "swaggerapi/swagger-ui:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            null
---
# Source: kangal/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-kangal-proxy
  labels:
    app: kangal-proxy
    chart: kangal-2.3.0
    release: release-name
    heritage: Helm
    version: ""
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kangal-proxy
      release: release-name
  template:
    metadata:
      labels:
        app: kangal-proxy
        release: release-name
        environment: dev
        version: ""
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
        - name:  kangal-proxy
          image: "hellofresh/kangal:latest"
          imagePullPolicy: Always
          args:
            - proxy
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /status
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 4
          resources:
            {}
---
# Source: kangal/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-kangal-openapi-ui
  labels:
    app: kangal-openapi-ui
    chart: kangal-2.3.0
    release: release-name
    heritage: Helm
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:

    - host: kangal-openapi-ui.example.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: release-name-kangal-openapi-ui
                port:
                  name: http
---
# Source: kangal/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-kangal-proxy
  labels:
    app: kangal-proxy
    chart: kangal-2.3.0
    release: release-name
    heritage: Helm
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:

    - host: kangal-proxy.example.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: release-name-kangal-proxy
                port:
                  name: http
